[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-cleanguard-benchmark"
version = "0.2.0"
description = "CleanGuard+ local-damage and R-peak preservation benchmark for ECG denoising"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "PyWavelets>=1.4",
  "scipy>=1.10",
  "wfdb>=4.1",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
